--- a/API Samples.ipynb
+++ b/API Samples.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Visual Studio Team Services\n",
+    "Azure DevOps\n",
     "Python API samples\n",
     "\n",
     "Click \"Run\" in the Jupyter menu to get started.\n",
